--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>1st Web Page</title>
+        <title>Web 1-01 Quest</title>
         <meta charset="utf-8">
     </head>
     <body>
         <ol>
-            <li>HTML</li>
-            <li><a href="css.html" target="_self">CSS</a></li>
-            <li>Javascript</li>
+            <li><a href="page1.html" target="_blank">대학교</a></li>
+            <li><a href="page2.html" target="_blank">CEMO</a></li>
+            <li><a href="page3.html" target="_blank">데스트랩</a></li>
         </ol>
-        <h1>HTML 이란 ?</h1>
+        <h1>김초은</h1>
         <p>
-            <strong><a href="https://www.w3schools.com/html/default.asp" target="_blank"> HyperText Markup Language</a></strong> or <u>HTML</u> is the standard markup language for documents designed to be displayed in a web browser. It is often assisted by technologies such as <strong>Cascading Style Sheets (<u>CSS</u>)</strong> and scripting languages such as JavaScript.
+            현재 명지대학교 <a href="https://www.mju.ac.kr/mjukr/808/subview.do" target="_blank">컴퓨터공학과</a> 재학중이다.
         </p>
-        <img src="img.jpg" width="40%">
+        <img src="img.jpg" width="30%">
         <p>
-            Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for its appearance.
+            연극을 보러 다니는 동아리인 줄 알고 들어간 CEMO에서 개강파티때 선배의 꾐에 배우를 하게 됐다. 힘든 한학기를 마치고 할만큼 했다고 생각한 김초은은 동아리에서 발을 빼려고 했지만 또 그 선배의 선동으로 부회장을 하게 되고 그 선배는 졸업해버렸다.<br>막상 하다보니 멋진 극을 하고 마무리하고 싶어서 해외에서 <i><데스트랩></i>의 라이센스를 따와 대본 넘겨받기를 기다리고 있다.
         </p>
     </body>
 </html>
